--- a/index.html
+++ b/index.html
@@ -61,6 +61,19 @@
     </div>
     <!-- SECTION trivia questions -->
     <div class="container-fluid" id="trivia-container">
+      <!-- <section class="row">
+        <div class="col-12 text-center">
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos autem nihil fuga doloremque ipsam quasi?</p>
+        </div>
+      </section>
+      <section class="row">
+        <div class="col-12 text-center">
+          <button class="btn btn-primary">Ans 1</button>
+          <button class="btn btn-primary">Ans 1</button>
+          <button class="btn btn-primary">Ans 1</button>
+          <button class="btn btn-primary">Ans 1</button>
+        </div>
+      </section> -->
 
 
     </div>
